--- a/1.split_data/split_data.ipynb
+++ b/1.split_data/split_data.ipynb
@@ -28,27 +28,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load data and set holdout/test parameters"
+    "## Specify datasets, test ratio, save path"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2862, 1450)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# load x (features) and y (labels) dataframes\n",
-    "labeled_data_path = pathlib.Path(\"../0.download_data/data/labeled_data.csv.gz\")\n",
-    "labeled_data = get_features_data(labeled_data_path)\n",
-    "print(labeled_data.shape)"
+    "# datasets to split\n",
+    "datasets = [\"ic\", \"no_ic\"]\n",
+    "\n",
+    "# ratio of data to be used for testing (ex 0.15 = 15%)\n",
+    "test_ratio = 0.15\n",
+    "\n",
+    "# make results dir for saving\n",
+    "results_dir = pathlib.Path(\"indexes/\")\n",
+    "results_dir.mkdir(parents=True, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load, split, save data indexes"
    ]
   },
   {
@@ -60,27 +64,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Splitting data for ic dataset\n",
+      "Dataset shape: (2862, 1450)\n",
       "Training data has shape: (2432, 1450)\n",
-      "Testing data has shape: (430, 1450)\n"
+      "Testing data has shape: (430, 1450)\n",
+      "Saved index data\n",
+      "\n",
+      "Splitting data for no_ic dataset\n",
+      "Dataset shape: (2841, 1450)\n",
+      "Training data has shape: (2414, 1450)\n",
+      "Testing data has shape: (427, 1450)\n",
+      "Saved index data\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# ratio of data to be used for testing (ex 0.15 = 15%)\n",
-    "test_ratio = 0.15\n",
+    "for dataset in datasets:\n",
+    "    print(f\"Splitting data for {dataset} dataset\")\n",
+    "    \n",
+    "    # load x (features) and y (labels) dataframes\n",
+    "    labeled_data_path = pathlib.Path(f\"../0.download_data/data/labeled_data__{dataset}.csv.gz\")\n",
+    "    labeled_data = get_features_data(labeled_data_path)\n",
+    "    print(f\"Dataset shape: {labeled_data.shape}\")\n",
     "\n",
-    "# get indexes of training and testing data\n",
-    "training_data, testing_data = train_test_split(\n",
-    "    labeled_data,\n",
-    "    test_size=test_ratio,\n",
-    "    stratify=labeled_data[[\"Mitocheck_Phenotypic_Class\"]],\n",
-    "    random_state=1,\n",
-    ")\n",
-    "train_indexes = training_data.index.to_numpy()\n",
-    "test_indexes = testing_data.index.to_numpy()\n",
+    "    # get indexes of training and testing data\n",
+    "    training_data, testing_data = train_test_split(\n",
+    "        labeled_data,\n",
+    "        test_size=test_ratio,\n",
+    "        stratify=labeled_data[[\"Mitocheck_Phenotypic_Class\"]],\n",
+    "        random_state=1,\n",
+    "    )\n",
+    "    train_indexes = training_data.index.to_numpy()\n",
+    "    test_indexes = testing_data.index.to_numpy()\n",
     "\n",
-    "print(f\"Training data has shape: {training_data.shape}\")\n",
-    "print(f\"Testing data has shape: {testing_data.shape}\")"
+    "    print(f\"Training data has shape: {training_data.shape}\")\n",
+    "    print(f\"Testing data has shape: {testing_data.shape}\")\n",
+    "    \n",
+    "    # create pandas dataframe with all indexes and their respective labels, stratified by phenotypic class\n",
+    "    index_data = []\n",
+    "    for index in train_indexes:\n",
+    "        index_data.append({\"labeled_data_index\": index, \"label\": \"train\"})\n",
+    "    for index in test_indexes:\n",
+    "        index_data.append({\"labeled_data_index\": index, \"label\": \"test\"})\n",
+    "\n",
+    "    # make index data a dataframe and sort it by labeled data index\n",
+    "    index_data = (\n",
+    "        pd.DataFrame(index_data)\n",
+    "        .sort_values([\"labeled_data_index\"])\n",
+    "    )\n",
+    "    \n",
+    "    # save indexes as tsv file\n",
+    "    index_data.to_csv(f\"{results_dir}/data_split_indexes__{dataset}.tsv\", sep=\"\\t\")\n",
+    "    print(f\"Saved index data\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preview index data"
    ]
   },
   {
@@ -115,27 +158,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2092</th>\n",
+       "      <th>1359</th>\n",
        "      <td>0</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1412</th>\n",
+       "      <th>1554</th>\n",
        "      <td>1</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1064</th>\n",
+       "      <th>149</th>\n",
        "      <td>2</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>764</th>\n",
+       "      <th>957</th>\n",
        "      <td>3</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2410</th>\n",
+       "      <th>1390</th>\n",
        "      <td>4</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
@@ -145,50 +188,50 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2254</th>\n",
-       "      <td>2911</td>\n",
+       "      <th>2609</th>\n",
+       "      <td>2889</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td>2890</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>580</th>\n",
-       "      <td>2912</td>\n",
+       "      <th>1275</th>\n",
+       "      <td>2891</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1753</th>\n",
-       "      <td>2913</td>\n",
+       "      <th>1882</th>\n",
+       "      <td>2892</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>629</th>\n",
-       "      <td>2914</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>794</th>\n",
-       "      <td>2915</td>\n",
+       "      <th>1674</th>\n",
+       "      <td>2893</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2862 rows × 2 columns</p>\n",
+       "<p>2841 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "      labeled_data_index  label\n",
-       "2092                   0  train\n",
-       "1412                   1  train\n",
-       "1064                   2  train\n",
-       "764                    3  train\n",
-       "2410                   4  train\n",
+       "1359                   0  train\n",
+       "1554                   1  train\n",
+       "149                    2  train\n",
+       "957                    3  train\n",
+       "1390                   4  train\n",
        "...                  ...    ...\n",
-       "2254                2911  train\n",
-       "580                 2912  train\n",
-       "1753                2913  train\n",
-       "629                 2914  train\n",
-       "794                 2915  train\n",
+       "2609                2889   test\n",
+       "114                 2890  train\n",
+       "1275                2891  train\n",
+       "1882                2892  train\n",
+       "1674                2893  train\n",
        "\n",
-       "[2862 rows x 2 columns]"
+       "[2841 rows x 2 columns]"
       ]
      },
      "execution_count": 4,
@@ -197,40 +240,7 @@
     }
    ],
    "source": [
-    "# create pandas dataframe with all indexes and their respective labels, stratified by phenotypic class\n",
-    "index_data = []\n",
-    "for index in train_indexes:\n",
-    "    index_data.append({\"labeled_data_index\": index, \"label\": \"train\"})\n",
-    "for index in test_indexes:\n",
-    "    index_data.append({\"labeled_data_index\": index, \"label\": \"test\"})\n",
-    "\n",
-    "# make index data a dataframe and sort it by labeled data index\n",
-    "index_data = (\n",
-    "    pd.DataFrame(index_data)\n",
-    "    .sort_values([\"labeled_data_index\"])\n",
-    ")\n",
-    "\n",
     "index_data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Save indexes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# make results dir for saving\n",
-    "results_dir = pathlib.Path(\"indexes/\")\n",
-    "results_dir.mkdir(parents=True, exist_ok=True)\n",
-    "# save indexes as tsv file\n",
-    "index_data.to_csv(f\"{results_dir}/data_split_indexes.tsv\", sep=\"\\t\")"
    ]
   }
  ],
