add clarifying comment about the model we visualize

--- a/7.figures/Figure4_LOIO_analysis.ipynb
+++ b/7.figures/Figure4_LOIO_analysis.ipynb
@@ -11,7 +11,9 @@
     "There are 270 individual images.\n",
     "\n",
     "Specifically, we trained multiclass models using the remaining 269 images and evaluated performance on the single held out example.\n",
-    "We visualize results here.\n",
+    "\n",
+    "The figure focuses on the balanced model trained using all nuclei features with illumination correction applied.\n",
+    "Additional supplementary figures compare performance against unbalanced, different feature subsets, and no-ic.\n",
     "\n",
     "### Panels\n",
     "\n",
