--- a/3.evaluate_model/process_jump_phenotype_profiles.ipynb
+++ b/3.evaluate_model/process_jump_phenotype_profiles.ipynb
@@ -19,7 +19,9 @@
     "2. Explore the top results per phenotype/treatment_type/model_type\n",
     "3. Convert it to wide format\n",
     "\n",
-    "This wide format represents a \"phenotypic profile\" which we can use similarly as an image-based morphology profile."
+    "This wide format represents a \"phenotypic profile\" which we can use similarly as an image-based morphology profile.\n",
+    "\n",
+    "We also fit a UMAP to this phenotypic profile for downstream visualization."
    ]
   },
   {
@@ -30,7 +32,9 @@
    "outputs": [],
    "source": [
     "import pathlib\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "import umap"
    ]
   },
   {
@@ -73,7 +77,9 @@
     "\n",
     "top_results_summary_file = pathlib.Path(output_dir, \"jump_most_significant_phenotype_enrichment.tsv\")\n",
     "final_jump_phenotype_file = pathlib.Path(output_dir, \"jump_phenotype_profiles.tsv.gz\")\n",
-    "shuffled_jump_phenotype_file = pathlib.Path(output_dir, \"jump_phenotype_profiles_shuffled.tsv.gz\")"
+    "shuffled_jump_phenotype_file = pathlib.Path(output_dir, \"jump_phenotype_profiles_shuffled.tsv.gz\")\n",
+    "\n",
+    "jump_umap_file = pathlib.Path(output_dir, \"jump_phenotype_profiling_umap.tsv.gz\")"
    ]
   },
   {
@@ -874,6 +880,24 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "51fce70e-5c0b-4321-852d-633059ed7ba4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metadata_columns = [\n",
+    "    \"Metadata_Plate\",\n",
+    "    \"treatment\",\n",
+    "    \"treatment_type\",\n",
+    "    \"Cell_type\",\n",
+    "    \"Time\",\n",
+    "    \"Metadata_Well\",\n",
+    "    \"cell_count\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "3cc68736-6a29-4fed-9e0b-e273609a1b4c",
    "metadata": {},
    "outputs": [
@@ -1093,7 +1117,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,15 +1127,7 @@
     "    jump_pred_df\n",
     "    .query(\"Metadata_model_type == 'final'\")\n",
     "    .drop(columns=[\"p_value\"])\n",
-    "    .pivot(index=[\n",
-    "        \"Metadata_Plate\",\n",
-    "        \"treatment\",\n",
-    "        \"treatment_type\",\n",
-    "        \"Cell_type\",\n",
-    "        \"Time\",\n",
-    "        \"Metadata_Well\",\n",
-    "        \"cell_count\"\n",
-    "    ], columns=\"phenotype\", values=\"comparison_metric_value\")\n",
+    "    .pivot(index=metadata_columns, columns=\"phenotype\", values=\"comparison_metric_value\")\n",
     "    .reset_index()\n",
     ")\n",
     "\n",
@@ -1123,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ab7b6288-b486-457a-a0a6-95e4ce362bf2",
    "metadata": {},
    "outputs": [
@@ -1343,7 +1359,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1353,15 +1369,7 @@
     "    jump_pred_df\n",
     "    .query(\"Metadata_model_type == 'shuffled'\")\n",
     "    .drop(columns=[\"p_value\"])\n",
-    "    .pivot(index=[\n",
-    "        \"Metadata_Plate\",\n",
-    "        \"treatment\",\n",
-    "        \"treatment_type\",\n",
-    "        \"Cell_type\",\n",
-    "        \"Time\",\n",
-    "        \"Metadata_Well\",\n",
-    "        \"cell_count\"\n",
-    "    ], columns=\"phenotype\", values=\"comparison_metric_value\")\n",
+    "    .pivot(index=metadata_columns, columns=\"phenotype\", values=\"comparison_metric_value\")\n",
     "    .reset_index()\n",
     ")\n",
     "\n",
@@ -1369,6 +1377,244 @@
     "\n",
     "print(jump_wide_shuffled_df.shape)\n",
     "jump_wide_shuffled_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b960b97-dfd1-4563-a162-c221fe7a69f3",
+   "metadata": {},
+   "source": [
+    "## Apply UMAP to phenotypic profiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0879d43c-eff3-4a2d-9f8d-f021209eac0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "umap_random_seed = 123\n",
+    "umap_n_components = 2\n",
+    "\n",
+    "feature_columns = jump_wide_final_df.drop(columns=metadata_columns).columns.tolist()\n",
+    "print(len(feature_columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3d929646-a0e7-418e-bf2d-1d1994435a0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/gway/miniconda3/envs/phenotypic_profiling_v3/lib/python3.9/site-packages/umap/umap_.py:1943: UserWarning: n_jobs value -1 overridden to 1 by setting random_state. Use no seed for parallelism.\n",
+      "  warn(f\"n_jobs value {self.n_jobs} overridden to 1 by setting random_state. Use no seed for parallelism.\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize UMAP\n",
+    "umap_fit = umap.UMAP(random_state=umap_random_seed, n_components=umap_n_components)\n",
+    "\n",
+    "# Fit UMAP and convert to pandas DataFrame\n",
+    "embeddings = pd.DataFrame(\n",
+    "    umap_fit.fit_transform(jump_wide_final_df.loc[:, feature_columns]),\n",
+    "    columns=[f\"UMAP{x}\" for x in range(0, umap_n_components)],\n",
+    ")\n",
+    "\n",
+    "# Combine with metadata\n",
+    "umap_with_metadata_df = pd.concat([jump_wide_final_df.loc[:, metadata_columns], embeddings], axis=1).assign(model_type=\"final\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e59dbfc1-0be1-471f-bbee-c6e1e4b21e6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/gway/miniconda3/envs/phenotypic_profiling_v3/lib/python3.9/site-packages/umap/umap_.py:1943: UserWarning: n_jobs value -1 overridden to 1 by setting random_state. Use no seed for parallelism.\n",
+      "  warn(f\"n_jobs value {self.n_jobs} overridden to 1 by setting random_state. Use no seed for parallelism.\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize UMAP\n",
+    "umap_fit = umap.UMAP(random_state=umap_random_seed, n_components=umap_n_components)\n",
+    "\n",
+    "# Fit UMAP and convert to pandas DataFrame\n",
+    "embeddings = pd.DataFrame(\n",
+    "    umap_fit.fit_transform(jump_wide_shuffled_df.loc[:, feature_columns]),\n",
+    "    columns=[f\"UMAP{x}\" for x in range(0, umap_n_components)],\n",
+    ")\n",
+    "\n",
+    "# Combine with metadata\n",
+    "umap_shuffled_with_metadata_df = pd.concat([jump_wide_shuffled_df.loc[:, metadata_columns], embeddings], axis=1).assign(model_type=\"shuffled\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f72a4304-0b69-4520-b264-42b4178ebf9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(32310, 10)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Metadata_Plate</th>\n",
+       "      <th>treatment</th>\n",
+       "      <th>treatment_type</th>\n",
+       "      <th>Cell_type</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Metadata_Well</th>\n",
+       "      <th>cell_count</th>\n",
+       "      <th>UMAP0</th>\n",
+       "      <th>UMAP1</th>\n",
+       "      <th>model_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BR00116991</td>\n",
+       "      <td>1-EBIO</td>\n",
+       "      <td>compound</td>\n",
+       "      <td>A549</td>\n",
+       "      <td>24</td>\n",
+       "      <td>P06</td>\n",
+       "      <td>1473</td>\n",
+       "      <td>12.869909</td>\n",
+       "      <td>6.067324</td>\n",
+       "      <td>final</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BR00116991</td>\n",
+       "      <td>1-octanol</td>\n",
+       "      <td>compound</td>\n",
+       "      <td>A549</td>\n",
+       "      <td>24</td>\n",
+       "      <td>I24</td>\n",
+       "      <td>1111</td>\n",
+       "      <td>10.205669</td>\n",
+       "      <td>2.729176</td>\n",
+       "      <td>final</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BR00116991</td>\n",
+       "      <td>2,5-furandimethanol</td>\n",
+       "      <td>compound</td>\n",
+       "      <td>A549</td>\n",
+       "      <td>24</td>\n",
+       "      <td>G12</td>\n",
+       "      <td>1153</td>\n",
+       "      <td>10.873019</td>\n",
+       "      <td>3.257759</td>\n",
+       "      <td>final</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BR00116991</td>\n",
+       "      <td>2-Oleoylglycerol</td>\n",
+       "      <td>compound</td>\n",
+       "      <td>A549</td>\n",
+       "      <td>24</td>\n",
+       "      <td>H02</td>\n",
+       "      <td>1451</td>\n",
+       "      <td>11.772993</td>\n",
+       "      <td>4.263201</td>\n",
+       "      <td>final</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>BR00116991</td>\n",
+       "      <td>4-CMTB</td>\n",
+       "      <td>compound</td>\n",
+       "      <td>A549</td>\n",
+       "      <td>24</td>\n",
+       "      <td>C01</td>\n",
+       "      <td>1570</td>\n",
+       "      <td>8.176355</td>\n",
+       "      <td>3.113487</td>\n",
+       "      <td>final</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Metadata_Plate            treatment treatment_type Cell_type  Time  \\\n",
+       "0     BR00116991               1-EBIO       compound      A549    24   \n",
+       "1     BR00116991            1-octanol       compound      A549    24   \n",
+       "2     BR00116991  2,5-furandimethanol       compound      A549    24   \n",
+       "3     BR00116991     2-Oleoylglycerol       compound      A549    24   \n",
+       "4     BR00116991               4-CMTB       compound      A549    24   \n",
+       "\n",
+       "  Metadata_Well  cell_count      UMAP0     UMAP1 model_type  \n",
+       "0           P06        1473  12.869909  6.067324      final  \n",
+       "1           I24        1111  10.205669  2.729176      final  \n",
+       "2           G12        1153  10.873019  3.257759      final  \n",
+       "3           H02        1451  11.772993  4.263201      final  \n",
+       "4           C01        1570   8.176355  3.113487      final  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Output file\n",
+    "umap_full_df = pd.concat([\n",
+    "    umap_with_metadata_df,\n",
+    "    umap_shuffled_with_metadata_df\n",
+    "], axis=\"rows\")\n",
+    "\n",
+    "umap_full_df.to_csv(jump_umap_file, sep=\"\\t\", index=False)\n",
+    "\n",
+    "print(umap_full_df.shape)\n",
+    "umap_full_df.head()"
    ]
   }
  ],
