--- a/3.evaluate_model/process_jump_phenotype_profiles.ipynb
+++ b/3.evaluate_model/process_jump_phenotype_profiles.ipynb
@@ -100,7 +100,7 @@
     "jump_sc_pred_file = f\"{url}/{commit}/{file}\"\n",
     "\n",
     "# Set constants\n",
-    "n_top_results_to_explore = 10"
+    "n_top_results_to_explore = 100"
    ]
   },
   {
@@ -484,7 +484,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3600, 11)\n"
+      "(18000, 11)\n"
      ]
     },
     {
@@ -628,6 +628,7 @@
     "# Focus on the top results for downstream interpretation\n",
     "jump_focused_top_results_df = (\n",
     "    jump_pred_df\n",
+    "    .query(\"Metadata_model_type == 'final'\")\n",
     "    .groupby([\"Metadata_model_type\", \"treatment_type\", \"Cell_type\", \"Time\", \"phenotype\"])\n",
     "    .apply(lambda x: x.nsmallest(n_top_results_to_explore, \"p_value\"))\n",
     "    .reset_index(drop=True)\n",
