rerun notebook and minor mods

--- a/3.evaluate_model/process_jump_phenotype_profiles.ipynb
+++ b/3.evaluate_model/process_jump_phenotype_profiles.ipynb
@@ -32,9 +32,7 @@
    "source": [
     "import pathlib\n",
     "from typing import List\n",
-    "import pandas as pd\n",
-    "\n",
-    "import umap"
+    "import pandas as pd"
    ]
   },
   {
