Switch to top 100 enriched treatments in JUMP (new sup table) (#60)
* switch to top 100 instead of top 10

* rerun processing and update .gz files

* rerun notebook and minor mods

--- a/3.evaluate_model/process_jump_phenotype_profiles.ipynb
+++ b/3.evaluate_model/process_jump_phenotype_profiles.ipynb
@@ -32,9 +32,7 @@
    "source": [
     "import pathlib\n",
     "from typing import List\n",
-    "import pandas as pd\n",
-    "\n",
-    "import umap"
+    "import pandas as pd"
    ]
   },
   {
@@ -54,7 +52,7 @@
     "jump_sc_pred_file = f\"{url}/{commit}/{file}\"\n",
     "\n",
     "# Set constants\n",
-    "n_top_results_to_explore = 10"
+    "n_top_results_to_explore = 100"
    ]
   },
   {
@@ -436,7 +434,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3600, 11)\n"
+      "(18000, 11)\n"
      ]
     },
     {
@@ -580,6 +578,7 @@
     "# Focus on the top results for downstream interpretation\n",
     "jump_focused_top_results_df = (\n",
     "    jump_pred_df\n",
+    "    .query(\"Metadata_model_type == 'final'\")\n",
     "    .groupby([\"Metadata_model_type\", \"treatment_type\", \"Cell_type\", \"Time\", \"phenotype\"])\n",
     "    .apply(lambda x: x.nsmallest(n_top_results_to_explore, \"p_value\"))\n",
     "    .reset_index(drop=True)\n",
