--- a/1.split_data/explore_data.ipynb
+++ b/1.split_data/explore_data.ipynb
@@ -69,7 +69,9 @@
     "# Set constants\n",
     "feature_spaces = [\"CP\", \"DP\", \"CP_and_DP\"]\n",
     "\n",
-    "output_dir = \"data\"\n",
+    "output_dir = pathlib.Path(\"data\")\n",
+    "output_dir.mkdir(exist_ok=True)\n",
+    "\n",
     "output_basename = pathlib.Path(output_dir, \"pairwise_correlations\")"
    ]
   },
@@ -270,7 +272,7 @@
    "source": [
     "for feature_space in feature_spaces:\n",
     "    # Get specific feature sets\n",
-    "    cp_feature_df, cp_label_df = get_X_y_data(labeled_data, dataset=feature_space)\n",
+    "    cp_feature_df, cp_label_df = get_X_y_data(labeled_data, feature_type=feature_space)\n",
     "\n",
     "    # Calculate pairwise correlations between nuclei\n",
     "    cp_tidy_corr_df = create_tidy_corr_matrix(cp_feature_df, cp_label_df)\n",
@@ -283,9 +285,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:phenotypic_profiling]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-phenotypic_profiling-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -297,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
