fix typo and rerun notebook

--- a/7.figures/SupplementaryFigure_tsne_figures.ipynb
+++ b/7.figures/SupplementaryFigure_tsne_figures.ipynb
@@ -134,7 +134,7 @@
     }
    ],
    "source": [
-    "# Load UMAP coordinates and process\n",
+    "# Load tsne coordinates and process\n",
     "tsne_dir <- file.path(\"../3.evaluate_model/evaluations/\")\n",
     "tsne_file <- file.path(tsne_dir, \"tsne_embeddings.csv.gz\")\n",
     "\n",
