respond to reviewer comments

--- a/3.evaluate_model/apply_tsne.ipynb
+++ b/3.evaluate_model/apply_tsne.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file = pathlib.Path(\"evaluations\", \"tsne_embeddings.csv.gz\")"
+    "output_file = pathlib.Path(\"evaluations\", \"tsne_embeddings.tsv.gz\")"
    ]
   },
   {
@@ -273,7 +273,7 @@
     "\n",
     "> The perplexity is related to the number of nearest neighbors that is used in other manifold learning algorithms. Larger datasets usually require a larger perplexity. Consider selecting a value between 5 and 50. Different values can result in significantly different results. The perplexity must be less than the number of samples.\n",
     "\n",
-    "We do not know what the appropriate value of perplexity is for our dataset, so we will test several"
+    "We do not know what the appropriate value of perplexity is for our dataset, so we will test several."
    ]
   },
   {
@@ -484,6 +484,9 @@
    ],
    "source": [
     "tsne_embedding_df = []\n",
+    "\n",
+    "# Select a wide range of values. The initial paper suggests between 5-50.\n",
+    "# We want to see how this wide range impacts the groupings.\n",
     "list_of_perplexities = [2, 10, 15, 30, 40, 60, 80, 100, 150, 300]\n",
     "\n",
     "for perplexity in list_of_perplexities:\n",
