remove unused variables and make tsv

--- a/7.figures/SupplementaryFigure_tsne_figures.ipynb
+++ b/7.figures/SupplementaryFigure_tsne_figures.ipynb
@@ -40,15 +40,6 @@
     "    \"supplementary_tsne_figure.png\"\n",
     ")\n",
     "\n",
-    "focus_corr_colors = c(\n",
-    "    \"TRUE\" = \"blue\",\n",
-    "    \"FALSE\" = \"orange\"\n",
-    ")\n",
-    "focus_corr_labels  = c(\n",
-    "    \"TRUE\" = \"Yes\",\n",
-    "    \"FALSE\" = \"No\"\n",
-    ")\n",
-    "\n",
     "list_of_perplexities <- c(2, 10, 15, 30, 40, 60, 80, 100, 150, 300)"
    ]
   },
@@ -136,7 +127,7 @@
    "source": [
     "# Load tsne coordinates and process\n",
     "tsne_dir <- file.path(\"../3.evaluate_model/evaluations/\")\n",
-    "tsne_file <- file.path(tsne_dir, \"tsne_embeddings.csv.gz\")\n",
+    "tsne_file <- file.path(tsne_dir, \"tsne_embeddings.tsv.gz\")\n",
     "\n",
     "tsne_df <- readr::read_tsv(\n",
     "    tsne_file,\n",
