calculate total silhouette sum per feature space

--- a/7.figures/Supplementary_silhouette_scores.ipynb
+++ b/7.figures/Supplementary_silhouette_scores.ipynb
@@ -308,6 +308,68 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "22137386-36b8-4001-9d62-a79c728e0363",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 3 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>feature_space</th><th scope=col>sum(silhouette_score)</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>CP_and_DP</td><td>0.2781337</td></tr>\n",
+       "\t<tr><td>DP       </td><td>0.1828668</td></tr>\n",
+       "\t<tr><td>CP       </td><td>0.5345792</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 3 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " feature\\_space & sum(silhouette\\_score)\\\\\n",
+       " <fct> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t CP\\_and\\_DP & 0.2781337\\\\\n",
+       "\t DP        & 0.1828668\\\\\n",
+       "\t CP        & 0.5345792\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 3 × 2\n",
+       "\n",
+       "| feature_space &lt;fct&gt; | sum(silhouette_score) &lt;dbl&gt; |\n",
+       "|---|---|\n",
+       "| CP_and_DP | 0.2781337 |\n",
+       "| DP        | 0.1828668 |\n",
+       "| CP        | 0.5345792 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  feature_space sum(silhouette_score)\n",
+       "1 CP_and_DP     0.2781337            \n",
+       "2 DP            0.1828668            \n",
+       "3 CP            0.5345792            "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Calculate total Silhouette scores per feature space\n",
+    "silhouette_summary_df %>%\n",
+    "    dplyr::group_by(feature_space) %>%\n",
+    "    dplyr::summarize(sum(silhouette_score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "1a9c220e-25b3-4de4-b058-5083781da7fb",
    "metadata": {},
    "outputs": [
@@ -385,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "1306ff4a-4357-472f-a8ab-3a6015e2ab30",
    "metadata": {},
    "outputs": [
@@ -463,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d70dc2d8-f769-4584-9406-2d959db9398e",
    "metadata": {},
    "outputs": [
